# Ticket-Management-System

./: .env  .env-Vorlage  .gitignore  Cargo.toml  Readme  createTicket.js  database.sql  docker-compose.yml  nginx.conf  server.js  todo.md
alter-code/: alt_createTicket.js  alt_database.sql  alt_nginx.conf  database.sql
alter-code/alt_frontend/: dashboard.html  editTicket.html  index.html  userManagement.html
alter-code/alt_frontend/css/: createTicket.css  dashboard.css  editTicket.css  userManagement.css  viewTicket.css
alter-code/alt_frontend/js/: createTicket.js  dashboard.js  index.js  userManagement.js  viewTicket.js
alter-code/alt_src/: error.rs
alter-code/alt_src/db/: connection.rs
alter-code/alt_src/handlers/: mod.rs
alter-code/alt_src/models/: auth.rs
backend/: Cargo.toml
backend/src/: error.rs  main.rs
backend/src/db/: connection.rs  query.rs
backend/src/handlers/: auth_handler.rs  ticket_handler.rs
backend/src/models/: auth.rs  mod.rs  ticket.rs  user.rs
frontend/: archived.html  createTicket.html  createTicket.js  dashboard.html  editTicket.html  index.html  login.html  userManagement.html  viewTicket.html
frontend/css/: archived.css  createTicket.css  dashboard.css  editTicket.css  index.css  theme.css  userManagement.css  viewTicket.css
frontend/js/: archived.js  createTicket.js  dashboard.js  editTicket.js  index.js  userManagement.js  viewTicket.js
src/: main.rs
src/db/: connection.rs  query.rs
src/handlers/: auth_handler.rs  ticket_handler.rs
src/models/: auth.rs  ticket.rs  user.rs
